--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
     <p>nav</p>
-    <ul>
+    <ul class="nav_links">
         <li><a href="/" alt="next">home</a></li>
         <li><a href="/page" alt="next">page</a></li>
         <li><a href="/page1" alt="next">page1</a></li>
